--- a/yaml/service_account.yaml
+++ b/yaml/service_account.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: g4seek-build-bot
+  namespace: knative-build
 secrets:
   - name: g4seek-dockerhub-account
